@@ -27,6 +27,7 @@ https://github.com/elastic/beats/compare/v1.2.3...1.3[Check the HEAD diff]
 
 *Affecting all Beats*
 - Fix output modes backoff counter reset. {issue}1803[1803] {pull}1814[1814] {pull}1818[1818]
+- Set logstash output default bulk_max_size to 2048. {issue}1662[1662]
 
 *Packetbeat*
 
